--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -57,10 +57,10 @@
   "my_photos_are": "صوري",
   "add_at_least_2_photos_to_continue": "أضف ما لا يقل عن صورتين للمتابعة",
   "enable_location": "تمكن موقع",
-  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "ستحتاج إلى تمكين طلب موقعك لاستخدام HeartLinks",
+  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "ستحتاج إلى تمكين طلب موقعك لاستخدام heartlinks",
   "allow_location": "السماح للموقع",
   "tell_me_more": "اخبرني المزيد",
-  "meet_people_nearby": "قابل الناس في مكان قريب",
+  "meet_people_nearby": "قابل الناس القريبة",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "سيتم استخدام موقعك لإظهار المباريات المحتملة بالقرب منك.",
   "want_to_avoid_someone_you_know_on_heartlink?": "هل تريد تجنب شخص تعرفه على HeartLink؟",
   "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "من السهل - مشاركة اتصال جهازك مع HeartLink عند استخدام هذه الميزة لاختيار من تريد تجنبه",
@@ -161,7 +161,7 @@
   "choose_the_theme_you_like_most": "اختر السمة التي تحبها أكثر",
   "log_out": "تسجيل خروج",
   "delete_account": "حذف الحساب",
-  "add_video,_pic_or_logo_toget_4%_closer_to_completing_your_profile_and_you_may_even_get_more_likes": "أضف الفيديو أو الموافقة المسبقة عن علم أو شعار أقرب بنسبة 4 ٪ من إكمال ملف التعريف الخاص بك وقد تحصل حتى على المزيد من الإعجابات",
+  "add_video,_pic_or_logo_toget_4%_closer_to_completing_your_profile_and_you_may_even_get_more_likes": "أضف الفيديو أو الموافقة المسبقة عن علم أو شعار ما يقرب بنسبة 4 ٪ من إكمال ملف التعريف الخاص بك وقد تحصل حتى على المزيد من الإعجابات",
   "add_media": "أضف الوسائط",
   "upload_photo": "حمل الصورة",
   "upload_loop": "حلقة تحميل",
@@ -224,7 +224,7 @@
   "school_name": "اسم المدرسة",
   "living_in": "يعيش في",
   "show_instagram_photos": "عرض صور Instagram",
-  "connect_instagram": "قم بتوصيل Instagram",
+  "connect_instagram": "توصيل Instagram",
   "choose_an_anthem": "اختر النشيد",
   "my_top_spotify_artists": "أفضل فناني سبوتيفي",
   "connect_spotify": "توصيل Spotify",
@@ -235,5 +235,9 @@
   "control_profile": "ملف التعريف",
   "don't_show_my_age": "لا تظهر عمري",
   "don't_show_my_distance": "لا تظهر مسافة بلدي",
-  "show_{nameScream}_on_my_profile": "عرض {namescream} في ملف التعريف الخاص بي"
+  "show_{nameScream}_on_my_profile": "عرض {namescream} في ملف التعريف الخاص بي",
+  "you_are_not_enter_the_phone_number": "أنت لا تدخل رقم الهاتف",
+  "Interests": "الإهتمامات",
+  "my_gender": "جنسي",
+  "my_orientation": "توجيهي"
 }
