--- a/src/locales/ca.json
+++ b/src/locales/ca.json
@@ -43,7 +43,7 @@
   "apply": "Aplicar -se",
   "my_name_is": "El meu nom és",
   "your_name": "El teu nom",
-  "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "Així és com apareixerà a HeartLink i no ho podreu canviar",
+  "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "Així és com apareixerà en enllaç de cor i no ho podreu canviar",
   "my_birthday_is": "El meu aniversari és",
   "your_age_will_be_public": "La vostra edat serà pública",
   "i_am_a": "sóc un",
@@ -56,7 +56,7 @@
   "show_me_gender": "Mostra’m gènere",
   "my_photos_are": "Les meves fotos són",
   "add_at_least_2_photos_to_continue": "Afegiu almenys 2 fotos per continuar",
-  "enable_location": "Activar la ubicació",
+  "enable_location": "Habilitar la ubicació",
   "you_will_need_to_enable_your_location_order_to_use_heartlinks": "Haureu d’habilitar la vostra comanda d’ubicació per utilitzar els enllaços de cor",
   "allow_location": "Permetre la ubicació",
   "tell_me_more": "Explica'm més",
@@ -210,7 +210,7 @@
   "pets_free": "Pets gratuït",
   "drink_beer": "Beu cervesa",
   "are_you_a_smoker": "Ets fumador",
-  "practice": "Practicar",
+  "practice": "Pràctica",
   "diet": "Dieta",
   "social_media": "Mitjans de comunicació social",
   "sleeping_habits": "Hàbits de dormir",
@@ -227,7 +227,7 @@
   "connect_instagram": "Connecteu Instagram",
   "choose_an_anthem": "Trieu un himne",
   "my_top_spotify_artists": "Els meus millors artistes de Spotify",
-  "connect_spotify": "Connectar Spotify",
+  "connect_spotify": "Connect Spotify",
   "gender": "Gènere",
   "sexual_orientation": "Orientació sexual",
   "show_my_sexual_orientation_on_profile": "Mostra la meva orientació sexual al perfil",
@@ -235,5 +235,9 @@
   "control_profile": "Perfil de control",
   "don't_show_my_age": "No mostris la meva edat",
   "don't_show_my_distance": "No mostris la meva distància",
-  "show_{nameScream}_on_my_profile": "Mostra {namescream} al meu perfil"
+  "show_{nameScream}_on_my_profile": "Mostra {namescream} al meu perfil",
+  "you_are_not_enter_the_phone_number": "No introduïu el número de telèfon",
+  "Interests": "Interessos",
+  "my_gender": "el meu gènere",
+  "my_orientation": "La meva orientació"
 }
