--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -12,7 +12,7 @@
   "my_number_is": "Meine Nummer ist",
   "phone_number": "Telefonnummer",
   "please_enter_a_valid_phone_number": "Bitte geben Sie eine gültige Telefonnummer ein",
-  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Wenn Sie auf \"Weiter\" tippen, sendet Heartlink einen Text mit Verifizierungscode. Nachrichten- und Datenraten Mate Apply.",
+  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Wenn Sie auf \"Weiter\" tippen, sendet Heartkink einen Text mit Verifizierungscode. Nachrichten- und Datenraten Mate Apply.",
   "the_verified_phone_number_can_be_used_to_log_in.": "Mit der überprüften Telefonnummer kann sich anmelden.",
   "learn_what_happens_when_your_number_changes.": "Erfahren Sie, was passiert, wenn sich Ihre Nummer ändert.",
   "continue": "Weitermachen",
@@ -23,7 +23,7 @@
   "what's_your_email?": "Wie ist deine E-Mailadresse?",
   "don't_lose_access_to_your_account,_verify_your_email": "Verlieren Sie keinen Zugriff auf Ihr Konto, überprüfen Sie Ihre E -Mail",
   "verify_instantly_by_connecting_your_google_account": "Überprüfen Sie sofort, indem Sie Ihr Google -Konto verbinden",
-  "i_want_to_receive_news,_updates_and_offers_from_heartlink": "Ich möchte Neuigkeiten, Updates und Angebote von HeartLink erhalten",
+  "i_want_to_receive_news,_updates_and_offers_from_heartlink": "Ich möchte Neuigkeiten, Updates und Angebote von Heartlink erhalten",
   "enter_email": "Email eingeben",
   "welcome_to_heartlink": "Willkommen bei Heartlink",
   "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "Bitte befolgen Sie unsere Regeln, um mehr Spaß zu haben und gemeinsam eine großartige Community aufzubauen",
@@ -57,7 +57,7 @@
   "my_photos_are": "Meine Fotos sind",
   "add_at_least_2_photos_to_continue": "Fügen Sie mindestens 2 Fotos hinzu, um fortzufahren",
   "enable_location": "Aktiviere Standort",
-  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "Sie müssen Ihre Standortbestellung ermöglichen, Heartlinks zu verwenden",
+  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "Sie müssen Ihren Standort bestellen, Heartlinks zu verwenden",
   "allow_location": "Standort zulassen",
   "tell_me_more": "Erzähl mir mehr",
   "meet_people_nearby": "Treffen Sie Leute in der Nähe",
@@ -139,12 +139,12 @@
   "control_who_you_see": "Kontrollieren Sie wen Sie sehen",
   "sliver_package": "Splitterpaket",
   "balance_recommendations": "Ausgleichsempfehlungen",
-  "see_the_most_relevant_people_to_you_(default_settings)": "Siehe die relevantesten Personen zu Ihnen (Standardeinstellungen)",
+  "see_the_most_relevant_people_to_you_(default_settings)": "Siehe die relevantesten Personen an Sie (Standardeinstellungen)",
   "recently_active": "Kürzlich aktiv",
   "see_the_most_recently_active_people_first": "Sehen Sie zuerst die zuletzt aktiven Personen an",
   "standard": "Standard",
   "only_be_shown_to_certain_types_of_people_for_individual_recommendations": "Werden nur bestimmte Arten von Personen für individuelle Empfehlungen gezeigt",
-  "only_people_i've_liked": "Nur Leute, die ich mochte",
+  "only_people_i've_liked": "Nur Leute, die ich gemocht habe",
   "only_people_you_have_liked_will_see_me": "Nur Leute, die Sie gemocht haben, werden mich sehen",
   "only_wi-fi_only": "Nur nur Wi-Fi",
   "on_wi-fi_and_mobile_data": "Auf Wi-Fi und mobilen Daten",
@@ -232,8 +232,12 @@
   "sexual_orientation": "Sexuelle Orientierung",
   "show_my_sexual_orientation_on_profile": "Zeigen Sie meine sexuelle Orientierung im Profil",
   "select_to_3": "Wählen Sie bis 3",
-  "control_profile": "Steuerprofil",
+  "control_profile": "Steuerungsprofil",
   "don't_show_my_age": "Zeigen Sie mein Alter nicht",
   "don't_show_my_distance": "Zeigen Sie meine Entfernung nicht",
-  "show_{nameScream}_on_my_profile": "Zeigen Sie in meinem Profil {namescream} an"
+  "show_{nameScream}_on_my_profile": "Zeigen Sie in meinem Profil {namescream} an",
+  "you_are_not_enter_the_phone_number": "Sie sind nicht die Telefonnummer eingeben",
+  "Interests": "Interessen",
+  "my_gender": "Mein Geschlecht",
+  "my_orientation": "meine Orientierung"
 }
