--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -35,7 +35,7 @@
   "play_it_cool": "Relájate",
   "respect_others_and_treat_them_as_you_would_like_to_be_treated": "Respeta a los demás y trátalos como le gustaría que lo traten",
   "be_proactive": "Ser proactivo",
-  "always_report_bad_behavior": "Siempre reportar mal comportamiento",
+  "always_report_bad_behavior": "Siempre reporta un mal comportamiento",
   "i_agree": "Estoy de acuerdo",
   "are_you_sure?": "¿Está seguro?",
   "you_will_exit_this_sign-up_process_and_all_your_information_will_be_deleted?": "¿Saldrá de este proceso de registro y toda su información se eliminará?",
@@ -90,7 +90,7 @@
   "get_read_receipts": "Obtenga recibos de lectura",
   "level_up_everyone_action_you_take_on_heartlink": "Nivele a todos la acción que tomas en HeartLink",
   "get_boost_profile": "Obtener perfil de impulso",
-  "get_supper_like": "Obtener cena como",
+  "get_supper_like": "Obtener una cena como",
   "silver_package": "Paquete de plata",
   "gold_package": "Paquete de oro",
   "get_read_receipt_package": "Obtenga el paquete de recibo de lectura",
@@ -145,7 +145,7 @@
   "standard": "Estándar",
   "only_be_shown_to_certain_types_of_people_for_individual_recommendations": "Solo se muestra en ciertos tipos de personas para recomendaciones individuales.",
   "only_people_i've_liked": "Solo personas a las que me han gustado",
-  "only_people_you_have_liked_will_see_me": "Solo las personas que te ha gustado me vemos",
+  "only_people_you_have_liked_will_see_me": "Solo las personas que te ha gustado me verán",
   "only_wi-fi_only": "Solo Wi-Fi solo",
   "on_wi-fi_and_mobile_data": "En Wi-Fi y datos móviles",
   "never_auto_play_videos": "Nunca reproducir automáticamente videos",
@@ -227,7 +227,7 @@
   "connect_instagram": "Conectar Instagram",
   "choose_an_anthem": "Elija un himno",
   "my_top_spotify_artists": "Mis mejores artistas de Spotify",
-  "connect_spotify": "Conectar Spotify",
+  "connect_spotify": "Conecte Spotify",
   "gender": "GÉNERO",
   "sexual_orientation": "Orientación sexual",
   "show_my_sexual_orientation_on_profile": "Muestra mi orientación sexual en el perfil",
@@ -235,5 +235,9 @@
   "control_profile": "Perfil de control",
   "don't_show_my_age": "No muestres mi edad",
   "don't_show_my_distance": "No muestres mi distancia",
-  "show_{nameScream}_on_my_profile": "Mostrar {NamesCream} en mi perfil"
+  "show_{nameScream}_on_my_profile": "Mostrar {NamesCream} en mi perfil",
+  "you_are_not_enter_the_phone_number": "No estás ingresando al número de teléfono",
+  "Interests": "Intereses",
+  "my_gender": "Mi género",
+  "my_orientation": "Mi orientación"
 }
