--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -5,7 +5,7 @@
   "log_in_with_facebook": "Kirjaudu sisään Facebookin kanssa",
   "log_in_with_phone_number": "Kirjaudu sisään puhelinnumerolla",
   "trouble_logging_in?": "Vaivaa sisäänkirjautumista sisään?",
-  "by_clicking_'login',_you_agree_with_our_terms._learn_how_we_process_your_data_in_our": "Napsauttamalla 'Kirjaudu sisään', hyväksyt ehdojamme. Opi kuinka käsittelemme tietosi",
+  "by_clicking_'login',_you_agree_with_our_terms._learn_how_we_process_your_data_in_our": "Napsauttamalla 'Kirjaudu sisään', hyväksyt ehdojemme kanssa. Opi kuinka käsittelemme tietosi",
   "privacy_policy": "Tietosuojakäytäntö",
   "and": "ja",
   "cookies_policy": "Evästeet",
@@ -62,7 +62,7 @@
   "tell_me_more": "Kerro minulle lisää",
   "meet_people_nearby": "Tapaa lähellä olevia ihmisiä",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "Sijainti käytetään näyttämään potentiaalisia otteluita lähelläsi.",
-  "want_to_avoid_someone_you_know_on_heartlink?": "Haluatko välttää joku, jonka tunnet Heartlinkissä?",
+  "want_to_avoid_someone_you_know_on_heartlink?": "Haluatko välttää joku, jonka tunnet Heartlinkillä?",
   "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Se on helppoa - jaa laitteen yhteyshenkilö Heartlinkin kanssa, kun käytät tätä ominaisuutta valitaksesi kuka haluat välttää",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Tallennamme estetyn yhteystietosi estääksesi sinua näkemästä toisiamme, jos yhteystiedossa on tili, jolla on sama tieto. Voit lopettaa jakamisen kanssamme asetuksissasi.",
   "learn_more_here,_including_how_heartlink_process_your_contacts": "Lisätietoja täältä, mukaan lukien kuinka HeartLink käsittelee yhteystietosi",
@@ -136,10 +136,10 @@
   "age_range": "Ikähaarukka",
   "show_me": "Näytä minulle",
   "we_use_these_preferences_to_find_matches._some_match_suggestions_may_not_fall_within_your_desired_parameters": "Käytämme näitä mieltymyksiä löytääksesi otteluita. Jotkut vastaavat ehdotukset eivät välttämättä kuulu haluamasi parametriisi",
-  "control_who_you_see": "Hallitse ketä näet",
+  "control_who_you_see": "Hallita ketä näet",
   "sliver_package": "Paketti",
   "balance_recommendations": "Tasapainon suositukset",
-  "see_the_most_relevant_people_to_you_(default_settings)": "Katso sinulle merkityksellisimmät ihmiset (oletusasetukset)",
+  "see_the_most_relevant_people_to_you_(default_settings)": "Katso sinulle tärkeimmät ihmiset (oletusasetukset)",
   "recently_active": "Äskettäin aktiivinen",
   "see_the_most_recently_active_people_first": "Katso viimeksi aktiiviset ihmiset ensin",
   "standard": "Standardi",
@@ -235,5 +235,9 @@
   "control_profile": "Ohjausprofiili",
   "don't_show_my_age": "Älä näytä ikäni",
   "don't_show_my_distance": "Älä näytä etäisyyttäni",
-  "show_{nameScream}_on_my_profile": "Näytä {namescream} profiilissani"
+  "show_{nameScream}_on_my_profile": "Näytä {namescream} profiilissani",
+  "you_are_not_enter_the_phone_number": "Et kirjoita puhelinnumeroa",
+  "Interests": "Kiinnostuksen kohteet",
+  "my_gender": "Sukupuoleni",
+  "my_orientation": "Oma suuntaus"
 }
