--- a/src/locales/hu.json
+++ b/src/locales/hu.json
@@ -1,6 +1,6 @@
 {
   "warm_welcome": "Meleg fogadtatás",
-  "we_hope_you_have_a_sweet_time_here": "Reméljük, hogy itt van egy édes időd",
+  "we_hope_you_have_a_sweet_time_here": "Reméljük, hogy itt van édes időd",
   "log_in_with_google": "Jelentkezzen be a Google -val",
   "log_in_with_facebook": "Jelentkezz be facebookal",
   "log_in_with_phone_number": "Jelentkezzen be telefonszámmal",
@@ -136,7 +136,7 @@
   "age_range": "Korcsoport",
   "show_me": "Mutasd meg nekem",
   "we_use_these_preferences_to_find_matches._some_match_suggestions_may_not_fall_within_your_desired_parameters": "Ezeket a preferenciákat használjuk a mérkőzések megtalálásához. Néhány mérkőzési javaslat nem tartozik a kívánt paraméterekbe",
-  "control_who_you_see": "Ellenőrizze, akit lát",
+  "control_who_you_see": "Ellenőrizze, ki látja",
   "sliver_package": "Szitáló csomag",
   "balance_recommendations": "Egyenleg ajánlások",
   "see_the_most_relevant_people_to_you_(default_settings)": "Lásd az Ön számára legmegfelelőbb embereket (alapértelmezett beállítások)",
@@ -150,7 +150,7 @@
   "on_wi-fi_and_mobile_data": "Wi-Fi és mobil adatokról",
   "never_auto_play_videos": "Soha ne auto videókat játsszon",
   "show_me_top_picks": "Mutasd meg nekem a legjobb válogatásokat",
-  "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Ennek bekapcsolása lehetővé teszi, hogy kiemelt legjobb választásként jelenjen meg a közeli más felhasználók számára",
+  "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Ennek bekapcsolása lehetővé teszi, hogy kiemelt legfontosabb válogatásként jelenjen meg a közeli más felhasználók számára",
   "activity_status": "Tevékenységi állapot",
   "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Engedje meg, hogy más tagok megtudják, vajon a közelmúltban aktív -e az utolsó 24 órában a Heart Link -en. Ha kikapcsolta ezt, akkor nem fogják látni a közelmúltban aktív állapotát",
   "app_settings": "Alkalmazásbeállítások",
@@ -173,7 +173,7 @@
   "interest": "ÉRDEKLŐDÉS",
   "out_of_5": "5 -ből",
   "search_interest": "Keresési érdeklődés",
-  "dating_purposes": "Randevú",
+  "dating_purposes": "Randevúk",
   "i'm_looking_for": "Keresem",
   "empty": "üres",
   "now_i'm_looking_for...": "Most keresek ...",
@@ -206,7 +206,7 @@
   "personality_type": "Személyiségtípus",
   "communication_style": "Kommunikációs stílus",
   "love_languages": "Szerelmi nyelvek",
-  "life_style": "Életmód",
+  "life_style": "Életstílus",
   "pets_free": "Háziállatok ingyenesek",
   "drink_beer": "Sört inni",
   "are_you_a_smoker": "Dohányzó vagy",
@@ -235,5 +235,9 @@
   "control_profile": "Vezérlőprofil",
   "don't_show_my_age": "Ne mutasd meg az én koromat",
   "don't_show_my_distance": "Ne mutasd meg a távolságomat",
-  "show_{nameScream}_on_my_profile": "Mutassa meg a {namescream} -et a profilomon"
+  "show_{nameScream}_on_my_profile": "Mutassa meg a {namescream} -et a profilomon",
+  "you_are_not_enter_the_phone_number": "Nem írja be a telefonszámot",
+  "Interests": "Érdeklődés",
+  "my_gender": "a nemem",
+  "my_orientation": "orientációm"
 }
