--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -56,13 +56,13 @@
   "show_me_gender": "성별을 보여주세요",
   "my_photos_are": "내 사진은",
   "add_at_least_2_photos_to_continue": "계속하려면 2 개 이상의 사진을 추가하십시오",
-  "enable_location": "위치 활성화",
+  "enable_location": "위치를 활성화하십시오",
   "you_will_need_to_enable_your_location_order_to_use_heartlinks": "하트 링크를 사용하려면 위치 주문을 활성화해야합니다.",
   "allow_location": "위치를 허용합니다",
   "tell_me_more": "더 말 해주세요",
   "meet_people_nearby": "근처의 사람들을 만나십시오",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "귀하의 위치는 근처에 잠재적 인 경기를 보여주는 데 사용됩니다.",
-  "want_to_avoid_someone_you_know_on_heartlink?": "Heartlink에서 아는 사람을 피하고 싶습니까?",
+  "want_to_avoid_someone_you_know_on_heartlink?": "하트 링크에서 아는 사람을 피하고 싶습니까?",
   "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "쉽습니다 -이 기능을 사용하여 피하고 싶은 사람을 선택할 때 장치의 Heartlink와의 접촉을 공유하십시오.",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "귀하의 연락처에 귀하가 제공하는 동일한 정보가있는 계정이 있으면 서로를 보지 못하도록 차단 된 연락처를 저장하겠습니다. 당신은 당신의 설정에서 우리와 공유를 중지 할 수 있습니다.",
   "learn_more_here,_including_how_heartlink_process_your_contacts": "Heartlink가 연락처를 처리하는 방법을 포함하여 여기에서 자세히 알아보십시오.",
@@ -87,7 +87,7 @@
   "recommendations": "권장 사항",
   "new_connections": "새로운 연결",
   "messages": "메시지",
-  "get_read_receipts": "읽기 영수증을 받으십시오",
+  "get_read_receipts": "영수증을 읽으십시오",
   "level_up_everyone_action_you_take_on_heartlink": "당신이 하트 링크를 취하는 모든 사람의 행동을 평평하게하십시오",
   "get_boost_profile": "부스트 프로필을 얻으십시오",
   "get_supper_like": "만찬을 받으십시오",
@@ -140,7 +140,7 @@
   "sliver_package": "은색 패키지",
   "balance_recommendations": "균형 권장 사항",
   "see_the_most_relevant_people_to_you_(default_settings)": "가장 관련성이 높은 사람들 (기본 설정)을 참조하십시오.",
-  "recently_active": "최근에 활동합니다",
+  "recently_active": "최근에 활성화",
   "see_the_most_recently_active_people_first": "가장 최근에 활동적인 사람들을 먼저보십시오",
   "standard": "기준",
   "only_be_shown_to_certain_types_of_people_for_individual_recommendations": "개별 권장 사항을 위해 특정 유형의 사람들에게만 표시됩니다.",
@@ -235,5 +235,9 @@
   "control_profile": "제어 프로필",
   "don't_show_my_age": "내 나이를 보여주지 마십시오",
   "don't_show_my_distance": "내 거리를 보여주지 마십시오",
-  "show_{nameScream}_on_my_profile": "내 프로필에 {namescream}을 표시합니다"
+  "show_{nameScream}_on_my_profile": "내 프로필에 {namescream}을 표시합니다",
+  "you_are_not_enter_the_phone_number": "전화 번호를 입력하지 않습니다",
+  "Interests": "이해",
+  "my_gender": "내 성별",
+  "my_orientation": "내 오리엔테이션"
 }
