--- a/src/locales/ms.json
+++ b/src/locales/ms.json
@@ -33,7 +33,7 @@
   "don't_be_too_quick_to_give_out_personal_information.": "Jangan terlalu cepat memberikan maklumat peribadi.",
   "date_safety_guidelines": "Garis panduan keselamatan tarikh",
   "play_it_cool": "Mainkan ia sejuk",
-  "respect_others_and_treat_them_as_you_would_like_to_be_treated": "Hormati orang lain dan perlakukan mereka seperti yang anda ingin dirawat",
+  "respect_others_and_treat_them_as_you_would_like_to_be_treated": "Hormati orang lain dan melayannya seperti yang anda ingin dirawat",
   "be_proactive": "Jadilah proaktif",
   "always_report_bad_behavior": "Sentiasa melaporkan tingkah laku buruk",
   "i_agree": "saya setuju",
@@ -141,14 +141,14 @@
   "balance_recommendations": "Cadangan keseimbangan",
   "see_the_most_relevant_people_to_you_(default_settings)": "Lihat orang yang paling relevan kepada anda (tetapan lalai)",
   "recently_active": "Baru -baru ini aktif",
-  "see_the_most_recently_active_people_first": "Lihat orang yang paling aktif baru -baru ini",
+  "see_the_most_recently_active_people_first": "Lihat orang yang paling baru aktif terlebih dahulu",
   "standard": "Standard",
   "only_be_shown_to_certain_types_of_people_for_individual_recommendations": "Hanya ditunjukkan kepada jenis orang tertentu untuk cadangan individu",
   "only_people_i've_liked": "Hanya orang yang saya suka",
   "only_people_you_have_liked_will_see_me": "Hanya orang yang anda suka akan melihat saya",
   "only_wi-fi_only": "Hanya Wi-Fi sahaja",
   "on_wi-fi_and_mobile_data": "Pada Wi-Fi dan data mudah alih",
-  "never_auto_play_videos": "Jangan sesekali bermain video",
+  "never_auto_play_videos": "Tidak pernah bermain video automatik",
   "show_me_top_picks": "Tunjukkan kepada saya pilihan utama",
   "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Menghidupkan ini akan membolehkan anda ditunjukkan sebagai pilihan utama yang dipaparkan kepada pengguna lain berhampiran anda",
   "activity_status": "Status aktiviti",
@@ -172,8 +172,8 @@
   "about_me_-_maximize_500_words": "Mengenai saya - memaksimumkan 500 perkataan",
   "interest": "Minat",
   "out_of_5": "daripada 5",
-  "search_interest": "Minat carian",
-  "dating_purposes": "Tujuan temu janji",
+  "search_interest": "Minat cari",
+  "dating_purposes": "Tujuan dating",
   "i'm_looking_for": "saya sedang mencari",
   "empty": "kosong",
   "now_i'm_looking_for...": "Sekarang saya mencari ...",
@@ -235,5 +235,9 @@
   "control_profile": "Profil kawalan",
   "don't_show_my_age": "Jangan tunjukkan usia saya",
   "don't_show_my_distance": "Jangan tunjukkan jarak saya",
-  "show_{nameScream}_on_my_profile": "Tunjukkan {namescream} pada profil saya"
+  "show_{nameScream}_on_my_profile": "Tunjukkan {namescream} pada profil saya",
+  "you_are_not_enter_the_phone_number": "Anda tidak memasukkan nombor telefon",
+  "Interests": "Kepentingan",
+  "my_gender": "Jantina saya",
+  "my_orientation": "orientasi saya"
 }
