--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -33,7 +33,7 @@
   "don't_be_too_quick_to_give_out_personal_information.": "Не будь слишком быстрым, чтобы выделять личную информацию.",
   "date_safety_guidelines": "Руководства по безопасности даты",
   "play_it_cool": "Играй в крутой",
-  "respect_others_and_treat_them_as_you_would_like_to_be_treated": "Уважайте других и относитесь к ним так, как вы хотели бы относиться к вам",
+  "respect_others_and_treat_them_as_you_would_like_to_be_treated": "Уважайте других и относитесь к ним так, как хотите, чтобы с вами обращались",
   "be_proactive": "Быть инициативным",
   "always_report_bad_behavior": "Всегда сообщайте о плохом поведении",
   "i_agree": "Я согласен",
@@ -73,7 +73,7 @@
   "my_anthem": "Мой гимн",
   "what_is_the_reason_for_your_report?": "Какова причина вашего отчета?",
   "please_choose_1_reason": "Пожалуйста, выберите 1 причину",
-  "we_won't_let_puddink_know_that_you_reported_them": "Мы не сообщим Пуддинку, что вы их сообщили",
+  "we_won't_let_puddink_know_that_you_reported_them": "Мы не дадим понять, что вы их сообщили",
   "can_you_tell_us_what_happened?": "Вы можете сказать нам, что случилось?",
   "would_you_mind_sharing_more_details_with_us?": "Не могли бы вы поделиться с нами более подробной информацией?",
   "add_a_comment": "Добавить комментарий",
@@ -91,7 +91,7 @@
   "level_up_everyone_action_you_take_on_heartlink": "Уровень всех действий, которые вы предпринимаете на Heartlink",
   "get_boost_profile": "Получить профиль Boost",
   "get_supper_like": "Получите ужин вроде",
-  "silver_package": "Серебряная упаковка",
+  "silver_package": "Серебряный пакет",
   "gold_package": "Золотой пакет",
   "get_read_receipt_package": "Получите пакет квитанции о прочтении",
   "stay_up_to_date": "Будьте в курсе",
@@ -150,7 +150,7 @@
   "on_wi-fi_and_mobile_data": "На Wi-Fi и мобильные данные",
   "never_auto_play_videos": "Никогда не воспроизводите видео",
   "show_me_top_picks": "Покажи мне лучшие выборы",
-  "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Включение этого позволит вам показать в качестве избранного лучшего выбора другим пользователям рядом с вами",
+  "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Включение этого позволит вам показать в качестве фигурного выбора другим пользователям рядом с вами",
   "activity_status": "Статус деятельности",
   "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Позвольте другим участникам увидеть, были ли вы недавно активными в течение последних 24 часов на Heartlink. Если вы выключили это, они не смогут увидеть ваш недавно активного статуса",
   "app_settings": "Настройки приложения",
@@ -180,7 +180,7 @@
   "share_the_purpose_to_find_'that_person'": "Поделитесь цели, чтобы найти «этого человека»",
   "i_know_languages": "Я знаю языки",
   "the_language_i_know": "Язык, который я знаю",
-  "choose_up_to_5_languages_you_know_and_add_to_your_profile": "Выберите до 5 языков, которые вы знаете и добавьте в свой профиль",
+  "choose_up_to_5_languages_you_know_and_add_to_your_profile": "Выберите до 5 языков, которые вы знаете, и добавьте в свой профиль",
   "basic_information": "ОСНОВНАЯ ИНФОРМАЦИЯ",
   "add_more_info_so_people_can_see_your_amazing_pictures": "Добавьте больше информации, чтобы люди могли увидеть ваши удивительные фотографии",
   "what_is_your_zodiac_sign?": "Какой твой знак зодиака?",
@@ -224,9 +224,9 @@
   "school_name": "Название школы",
   "living_in": "Жизнь в",
   "show_instagram_photos": "Показать фотографии в Instagram",
-  "connect_instagram": "Подключить Instagram",
+  "connect_instagram": "Подключите Instagram",
   "choose_an_anthem": "Выберите гимн",
-  "my_top_spotify_artists": "Мои первые художники Spotify",
+  "my_top_spotify_artists": "Мои первые артисты Spotify",
   "connect_spotify": "Подключить Spotify",
   "gender": "ПОЛ",
   "sexual_orientation": "Сексуальная ориентация",
@@ -235,5 +235,9 @@
   "control_profile": "Профиль управления",
   "don't_show_my_age": "Не показывай мой возраст",
   "don't_show_my_distance": "Не показывай мое расстояние",
-  "show_{nameScream}_on_my_profile": "Показать {namescream} в моем профиле"
+  "show_{nameScream}_on_my_profile": "Показать {namescream} в моем профиле",
+  "you_are_not_enter_the_phone_number": "Вы не вводите номер телефона",
+  "Interests": "Интересы",
+  "my_gender": "Мой пол",
+  "my_orientation": "моя ориентация"
 }
