--- a/src/locales/sk.json
+++ b/src/locales/sk.json
@@ -89,7 +89,7 @@
   "messages": "Správy",
   "get_read_receipts": "Získajte čítanie potvrdení",
   "level_up_everyone_action_you_take_on_heartlink": "Osoby na viac akcie, ktoré podniknete na Heartlink",
-  "get_boost_profile": "Získajte profil posilňovača",
+  "get_boost_profile": "Získajte profil zosilnenia",
   "get_supper_like": "Získajte večere ako",
   "silver_package": "Balenie striebra",
   "gold_package": "Balenie zlata",
@@ -138,10 +138,10 @@
   "we_use_these_preferences_to_find_matches._some_match_suggestions_may_not_fall_within_your_desired_parameters": "Tieto preferencie používame na nájdenie zápasov. Niektoré návrhy zápasu nemusia spadať do požadovaných parametrov",
   "control_who_you_see": "Ovládať, koho vidíš",
   "sliver_package": "Balenie",
-  "balance_recommendations": "Rovnovážne odporúčania",
+  "balance_recommendations": "Odporúčania vyváženia",
   "see_the_most_relevant_people_to_you_(default_settings)": "Pozrite sa na vás najrelevantnejších ľudí (predvolené nastavenia)",
   "recently_active": "Nedávno aktívny",
-  "see_the_most_recently_active_people_first": "Pozrite si najskôr najskôr aktívnych ľudí",
+  "see_the_most_recently_active_people_first": "Pozrite sa najskôr najskôr aktívnych ľudí",
   "standard": "Norma",
   "only_be_shown_to_certain_types_of_people_for_individual_recommendations": "Ukážte sa iba určitým typom ľudí, pokiaľ ide o individuálne odporúčania",
   "only_people_i've_liked": "Iba ľudia, ktorí sa mi páčili",
@@ -150,11 +150,11 @@
   "on_wi-fi_and_mobile_data": "Na Wi-Fi a mobilné údaje",
   "never_auto_play_videos": "Nikdy automaticky prehrávajte videá",
   "show_me_top_picks": "Ukáž mi najlepšie výbery",
-  "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Zapnutie vám umožní byť zobrazený ako uvedený najlepší výber pre ostatných používateľov vo vašom okolí",
+  "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Zapnutie vám umožní byť zobrazený ako uvedený vrchol pre ostatných používateľov vo vašom okolí",
   "activity_status": "Status aktivity",
   "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Umožnite ostatným členom zistiť, či ste nedávno aktívni za posledných 24 hodín na Heartlink. Ak ste to vypli, nebudú môcť vidieť váš nedávno aktívny stav",
   "app_settings": "Nastavenia aplikácie",
-  "show_distance_in": "Ukázať vzdialenosť",
+  "show_distance_in": "Ukázať vzdialenosť v",
   "language": "Jazyk",
   "chose_the_language_you_want_to_display": "Vyberte jazyk, ktorý chcete zobraziť",
   "dark_theme": "Téma",
@@ -203,7 +203,7 @@
   "future_family": "Budúca rodina",
   "education": "Vzdelávanie",
   "vaccine_for_covid": "Vakcína",
-  "personality_type": "Typ osobnosti",
+  "personality_type": "Osobnosť",
   "communication_style": "Komunikačný štýl",
   "love_languages": "Láska jazyky",
   "life_style": "Životný štýl",
@@ -235,5 +235,9 @@
   "control_profile": "Kontrolný profil",
   "don't_show_my_age": "Neukazujte môj vek",
   "don't_show_my_distance": "Nezobrazujte moju vzdialenosť",
-  "show_{nameScream}_on_my_profile": "Zobraziť {namescream} v mojom profile"
+  "show_{nameScream}_on_my_profile": "Zobraziť {namescream} v mojom profile",
+  "you_are_not_enter_the_phone_number": "Nezadajte telefónne číslo",
+  "Interests": "Záujmy",
+  "my_gender": "moje pohlavie",
+  "my_orientation": "moja orientácia"
 }
