--- a/src/locales/sv.json
+++ b/src/locales/sv.json
@@ -139,7 +139,7 @@
   "control_who_you_see": "Kontrollera vem du ser",
   "sliver_package": "Skivpaket",
   "balance_recommendations": "Balansrekommendationer",
-  "see_the_most_relevant_people_to_you_(default_settings)": "Se de mest relevanta personerna för dig (standardinställningar)",
+  "see_the_most_relevant_people_to_you_(default_settings)": "Se de mest relevanta personerna till dig (standardinställningar)",
   "recently_active": "Nyligen aktiv",
   "see_the_most_recently_active_people_first": "Se de senast aktiva människorna först",
   "standard": "Standard",
@@ -150,13 +150,13 @@
   "on_wi-fi_and_mobile_data": "På Wi-Fi och mobildata",
   "never_auto_play_videos": "Aldrig automatiskt spela videor",
   "show_me_top_picks": "Visa mig toppval",
-  "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Att slå på detta gör att du kan visas som en presenterad toppval till andra användare nära dig",
+  "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Att slå på detta gör att du kan visas som en framtida toppval till andra användare nära dig",
   "activity_status": "Aktivitetsstatus",
   "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Låt andra medlemmar se om du nyligen var aktiv under den senaste 24 timmar på Heartlink. Om du har stängt av detta kommer de inte att kunna se din nyligen aktiva status",
   "app_settings": "App inställningar",
   "show_distance_in": "Visa avstånd",
   "language": "Språk",
-  "chose_the_language_you_want_to_display": "Valde det språk du vill visa",
+  "chose_the_language_you_want_to_display": "Välj det språk du vill visa",
   "dark_theme": "Mörkt tema",
   "choose_the_theme_you_like_most": "Välj det tema du gillar mest",
   "log_out": "LOGGA UT",
@@ -235,5 +235,9 @@
   "control_profile": "Kontrollprofil",
   "don't_show_my_age": "Visa inte min ålder",
   "don't_show_my_distance": "Visa inte mitt avstånd",
-  "show_{nameScream}_on_my_profile": "Visa {namescream} på min profil"
+  "show_{nameScream}_on_my_profile": "Visa {namescream} på min profil",
+  "you_are_not_enter_the_phone_number": "Du anger inte telefonnumret",
+  "Interests": "Intressen",
+  "my_gender": "mitt kön",
+  "my_orientation": "Min orientering"
 }
