--- a/src/locales/da.json
+++ b/src/locales/da.json
@@ -12,7 +12,7 @@
   "my_number_is": "Mit nummer er",
   "phone_number": "Telefonnummer",
   "please_enter_a_valid_phone_number": "Indtast venligst et gyldigt telefonnummer",
-  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Når du trykker på 'Fortsæt', sender Heartlink en tekst med verifikationskode. Meddelelse og datahastigheder, der er parret.",
+  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Når du trykker på 'Fortsæt', sender HeartLink en tekst med verifikationskode. Meddelelse og datahastigheder, der er parret.",
   "the_verified_phone_number_can_be_used_to_log_in.": "Det verificerede telefonnummer kan bruges til at logge ind.",
   "learn_what_happens_when_your_number_changes.": "Lær hvad der sker, når dit nummer ændres.",
   "continue": "Blive ved",
@@ -57,7 +57,7 @@
   "my_photos_are": "Mine fotos er",
   "add_at_least_2_photos_to_continue": "Tilføj mindst 2 fotos for at fortsætte",
   "enable_location": "Aktivér placering",
-  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "Du bliver nødt til at aktivere din placeringsordre for at bruge HeartLinks",
+  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "Du bliver nødt til at aktivere din placeringsordre til at bruge HeartLinks",
   "allow_location": "Tillad placering",
   "tell_me_more": "Fortæl mig mere",
   "meet_people_nearby": "Mød mennesker i nærheden",
@@ -87,7 +87,7 @@
   "recommendations": "Anbefalinger",
   "new_connections": "Nye forbindelser",
   "messages": "Beskeder",
-  "get_read_receipts": "Få læst kvitteringer",
+  "get_read_receipts": "Få læsning af kvitteringer",
   "level_up_everyone_action_you_take_on_heartlink": "Niveau op alle handlinger, du tager på hjertelink",
   "get_boost_profile": "Få boost -profil",
   "get_supper_like": "Få aftensmad som",
@@ -139,7 +139,7 @@
   "control_who_you_see": "Kontroller, hvem du ser",
   "sliver_package": "Sliver -pakke",
   "balance_recommendations": "Balanceanbefalinger",
-  "see_the_most_relevant_people_to_you_(default_settings)": "Se de mest relevante personer til dig (standardindstillinger)",
+  "see_the_most_relevant_people_to_you_(default_settings)": "Se de mest relevante personer for dig (standardindstillinger)",
   "recently_active": "For nylig aktiv",
   "see_the_most_recently_active_people_first": "Se de senest aktive mennesker først",
   "standard": "Standard",
@@ -235,5 +235,9 @@
   "control_profile": "Kontrolprofil",
   "don't_show_my_age": "Vis ikke min alder",
   "don't_show_my_distance": "Vis ikke min afstand",
-  "show_{nameScream}_on_my_profile": "Vis {Namescream} på min profil"
+  "show_{nameScream}_on_my_profile": "Vis {Namescream} på min profil",
+  "you_are_not_enter_the_phone_number": "Du indtaster ikke telefonnummeret",
+  "Interests": "Interesser",
+  "my_gender": "Mit køn",
+  "my_orientation": "min orientering"
 }
