--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -123,7 +123,7 @@
   "turn_off_ads": "Turn Off Ads",
   "have_fun_without_interruptions": "Have fun without interruptions",
   "settings": "SETTINGS",
-  "edit_profile": "EDIT PROFILE",
+  "edit_profile": "Edit Profile",
   "safety": "SAFETY",
   "complete": "complete",
   "global": "Global",
@@ -235,5 +235,9 @@
   "control_profile": "CONTROL PROFILE",
   "don't_show_my_age": "Don't show my age",
   "don't_show_my_distance": "Don't show my distance",
-  "show_{nameScream}_on_my_profile": "Show {nameScream} on my profile"
+  "show_{nameScream}_on_my_profile": "Show {nameScream} on my profile",
+  "you_are_not_enter_the_phone_number": "You are not enter the phone number",
+  "Interests": "Interests",
+  "my_gender": "my gender",
+  "my_orientation": "my orientation"
 }
