--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -139,7 +139,7 @@
   "control_who_you_see": "Контролювати, кого ви бачите",
   "sliver_package": "Пакет Sliver",
   "balance_recommendations": "Баланс рекомендації",
-  "see_the_most_relevant_people_to_you_(default_settings)": "Перегляньте для вас найбільш релевантних людей (налаштування за замовчуванням)",
+  "see_the_most_relevant_people_to_you_(default_settings)": "Дивіться для вас найрелевантніших людей (налаштування за замовчуванням)",
   "recently_active": "Нещодавно активний",
   "see_the_most_recently_active_people_first": "Побачте першим останнім часом активних людей",
   "standard": "Стандартний",
@@ -150,7 +150,7 @@
   "on_wi-fi_and_mobile_data": "На Wi-Fi та мобільних даних",
   "never_auto_play_videos": "Ніколи автоматично відтворювати відео",
   "show_me_top_picks": "Покажіть мені найкращі вибори",
-  "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Увімкнення цього дозволить вам показати як популярний верхній вибір для інших користувачів поблизу вас",
+  "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Увімкнути це дозволить вам показати як популярний верхній вибір для інших користувачів поблизу вас",
   "activity_status": "Статус активності",
   "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Дозвольте іншим членам побачити, чи нещодавно ви були активними протягом останніх 24 годин на Heartlink. Якщо ви вимкнули це, вони не зможуть побачити ваш нещодавно активний статус",
   "app_settings": "Налаштування додатків",
@@ -209,7 +209,7 @@
   "life_style": "Стиль життя",
   "pets_free": "Домашні тварини безкоштовно",
   "drink_beer": "Пити пиво",
-  "are_you_a_smoker": "Ви курець",
+  "are_you_a_smoker": "Ти курець",
   "practice": "Практикувати",
   "diet": "Дієта",
   "social_media": "Соц.медіа",
@@ -235,5 +235,9 @@
   "control_profile": "Профіль управління",
   "don't_show_my_age": "Не показуйте мого віку",
   "don't_show_my_distance": "Не показуйте мою відстань",
-  "show_{nameScream}_on_my_profile": "Показати {samescream} у моєму профілі"
+  "show_{nameScream}_on_my_profile": "Показати {samescream} у моєму профілі",
+  "you_are_not_enter_the_phone_number": "Ви не вводите номер телефону",
+  "Interests": "Інтереси",
+  "my_gender": "Моя стать",
+  "my_orientation": "Моя орієнтація"
 }
