--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -21,7 +21,7 @@
   "resend_code": "Mã gửi lại",
   "invalid_code._please_try_again": "Mã không hợp lệ. Vui lòng thử lại",
   "what's_your_email?": "Email của bạn là gì?",
-  "don't_lose_access_to_your_account,_verify_your_email": "Đừng mất quyền truy cập vào tài khoản của bạn, xác minh email của bạn",
+  "don't_lose_access_to_your_account,_verify_your_email": "Không mất quyền truy cập vào tài khoản của bạn, xác minh email của bạn",
   "verify_instantly_by_connecting_your_google_account": "Xác minh ngay lập tức bằng cách kết nối tài khoản Google của bạn",
   "i_want_to_receive_news,_updates_and_offers_from_heartlink": "Tôi muốn nhận tin tức, cập nhật và cung cấp từ HeartLink",
   "enter_email": "Nhập email",
@@ -182,7 +182,7 @@
   "the_language_i_know": "Ngôn ngữ tôi biết",
   "choose_up_to_5_languages_you_know_and_add_to_your_profile": "Chọn tối đa 5 ngôn ngữ bạn biết và thêm vào hồ sơ của bạn",
   "basic_information": "THÔNG TIN CƠ BẢN",
-  "add_more_info_so_people_can_see_your_amazing_pictures": "Thêm thông tin để mọi người có thể xem hình ảnh tuyệt vời của bạn",
+  "add_more_info_so_people_can_see_your_amazing_pictures": "Thêm thông tin thêm để mọi người có thể xem hình ảnh tuyệt vời của bạn",
   "what_is_your_zodiac_sign?": "Cung hoàng đạo của bạn là gì?",
   "your_education_level?": "Trình độ học vấn của bạn?",
   "do_you_want_to_have_children?": "Bạn muốn có con không?",
@@ -235,5 +235,9 @@
   "control_profile": "Hồ sơ kiểm soát",
   "don't_show_my_age": "Đừng thể hiện tuổi tác của tôi",
   "don't_show_my_distance": "Đừng hiển thị khoảng cách của tôi",
-  "show_{nameScream}_on_my_profile": "Hiển thị {nameCream} trên hồ sơ của tôi"
+  "show_{nameScream}_on_my_profile": "Hiển thị {nameCream} trên hồ sơ của tôi",
+  "you_are_not_enter_the_phone_number": "Bạn không nhập số điện thoại",
+  "Interests": "Lợi ích",
+  "my_gender": "Giới tính của tôi",
+  "my_orientation": "định hướng của tôi"
 }
